# TaskTest

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
auth_service/: Dockerfile  pyproject.toml
auth_service/app/: config.py  dependencies.py  jwt_utils.py  main.py  redis_client.py
auth_service/app/routers/: auth.py
auth_service/tests/: test_auth.py
user_service/: Dockerfile  alembic.ini  pyproject.toml
user_service/alembic/: env.py
user_service/alembic/versions/: c0d8fb2e2161_init.py
user_service/app/: config.py  database.py  main.py  models.py
user_service/app/routers/: user.py
user_service/tests/: test_user.py
