[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Астраханцев Павел "]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.18.4"
pydantic = "^2.7"
pydantic-settings = "^2.3"
passlib = {extras = ["bcrypt"], version = "^1.7"}
bcrypt = "4.0.1"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
